--- a/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -28,7 +28,11 @@
   				<button type="button" class="close" data-dismiss="alert">&times;</button>
   				<p th:text="${error}"></p>
 			</div>
-
+			
+			<div th:each="evento : ${eventos}">
+				<p th:text="${evento.descricao}"></p>
+			</div>
+			
   			<div class="alert alert-dismissible alert-success" th:if="${!#strings.isEmpty(sucesso)}">
   				<button type="button" class="close" data-dismiss="alert">&times;</button>
   				<p th:text="${sucesso}"></p>
