--- a/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/list-turmas.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/list-turmas.html
@@ -22,6 +22,17 @@
 	<div class="container animated fadeInRight"> 
     <div class="row">
     <div class="col-sm-12">
+    <!--  -->
+        <div class="alert alert-dismissible alert-success" th:each="evento : ${eventos}">
+		  <button type="button" class="close" data-dismiss="alert">&times;</button>
+		  <strong th:inline="text">[[${evento.turma.nome}]] 
+		  							[[${evento.turma.semestre}]] 
+		  							-
+		  							[[${evento.titulo}]] 
+		  							De [[${{evento.inicio}}]] a [[${{evento.termino}}]]</strong><br/>
+		<p th:text="${evento.descricao}"></p>
+		</div>	
+        <!--  -->
       <div class="panel panel-default">
         <div id="painelPlano" class="panel-body gp-panel-body-background">
           <p th:if="${#lists.isEmpty(presencas)}">Não há turmas</p>
