--- a/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/list-turmas.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/list-turmas.html
@@ -21,18 +21,18 @@
 
 	<div class="container animated fadeInRight"> 
     <div class="row">
-    <div class="col-sm-12">
-    <!--  -->
-        <div class="alert alert-dismissible alert-success" th:each="evento : ${eventos}">
+    
+   	<div th:each="evento : ${eventos}" class="col-sm-4">
+    	<div class="alert alert-dismissible alert-success">
 		  <button type="button" class="close" data-dismiss="alert">&times;</button>
-		  <strong th:inline="text">[[${evento.turma.nome}]] 
-		  							[[${evento.turma.semestre}]] 
-		  							-
-		  							[[${evento.titulo}]] 
-		  							De [[${{evento.inicio}}]] a [[${{evento.termino}}]]</strong><br/>
-		<p th:text="${evento.descricao}"></p>
-		</div>	
-        <!--  -->
+		  <strong th:inline="text">Turma - [[${evento.turma.nome}]]</strong><br/> 
+		  <strong th:text="${evento.titulo}"></strong><br/>
+		  <strong th:inline="text">Período: [[${{evento.inicio}}]] a [[${{evento.termino}}]]</strong>
+			<p th:text="${evento.descricao}"></p>
+		</div>
+	</div>
+    
+    <div class="col-sm-12">
       <div class="panel panel-default">
         <div id="painelPlano" class="panel-body gp-panel-body-background">
           <p th:if="${#lists.isEmpty(presencas)}">Não há turmas</p>
