--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/mapa-frequencias.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/mapa-frequencias.html
@@ -27,7 +27,7 @@
 		<div class="col-md-3">
 	    	<div class="panel panel-bluegray">
 	    		<div class="panel-heading">
-	    			<a class="panel-title" data-toggle="collapse" data-target="#mapaFrequencias" th:inline="text"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma [[${turma.nome}]]</a>
+	    			<a class="panel-title" data-toggle="collapse" data-target="#mapaFrequencias" th:inline="text"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma: [[${turma.nome}]] - [[${turma.semestre}]]</a>
 	    		</div>
 	    		<div id="mapaFrequencias" class="panel-body collapse in">
 	    			<div class="data-inline" align="center"></div>
