--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/vinculos-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/vinculos-turma.html
@@ -28,7 +28,7 @@
 	      <div class="col-md-4">
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma NPI - 2016.1</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma" th:inline="text"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma: [[${turma.nome}]] - [[${turma.semestre}]]</a>
   			  </div>
 	          <div id="detalhesTurma" class="panel-body collapse in">
 				  <table class="table table-hover">
