--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-expediente.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-expediente.html
@@ -65,6 +65,12 @@
   				<button type="button" class="close" data-dismiss="alert">&times;</button>
   				<strong th:text="${sucesso}"></strong>
   			</div>
+  			
+  			<div class="alert alert-dismissible alert-danger" th:if="${! #strings.isEmpty(error)}">
+  				<button type="button" class="close" data-dismiss="alert">&times;</button>
+  				<strong th:text="${error}"></strong>
+  			</div>
+			
 					    
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
