faltando teste de status SUBMETIDO;

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-avaliacao-plano.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-avaliacao-plano.html
@@ -122,13 +122,13 @@
 							        </select>
 						    	</div>
 							</div>
-							<div class="form-group">
+							<div class="form-group div-nota">
 						      <label for="nota" class="col-lg-2 control-label"><strong>Nota</strong></label>
 						      <div class="col-lg-10">
 						        <input name="nota" type="text" th:value="${submissaoPlano.nota}" class="form-control" id="nota" placeholder="Nota"></input>
 						      </div>
 						    </div>
-							<div class="form-group">
+							<div class="form-group div-comentario">
 						      <label for="comentario" class="col-lg-2 control-label"><strong>Comentário</strong></label>
 						      <div class="col-lg-10">
 						        <textarea name="comentario" class="form-control" th:text="${submissaoPlano.comentario}" rows="3" id="comentario"></textarea>
