--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliar-relatorio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliar-relatorio.html
@@ -130,7 +130,7 @@
 					    </div>
 					</div>
 				   
-				    <div class="form-group div-nota" th:if="${#strings.equals(status, 'SUBMETIDO')}">
+				    <div class="form-group div-nota">
 	 						<label class="control-label col-lg-2" for="nota"> <strong>Nota</strong></label>
 	 						<div class="col-lg-10">
 	 							<input type="text" class="form-control" id="nota" placeholder="0.0" name="nota" th:value="${submissaoRelatorio.nota}"/>
