Início da implementação da validação no javascript

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-evento.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-evento.html
@@ -85,7 +85,7 @@
 					    </div>
 					    <div class="form-group">
 					    	<div th:class="${#fields.hasErrors('inicio')} ? has-error">
-						      <label for="inicio" class="col-lg-2 control-label">Perido Evento</label>
+						      <label for="inicio" class="col-lg-2 control-label">Período Evento</label>
 						      <div class="col-lg-4">
 						        <input th:field="*{inicio}" type="text" class="form-control data" placeholder="dd/MM/yyyy"/>
 						        <label class="control-label" th:errors="*{inicio}"></label>
