--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-expediente.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-expediente.html
@@ -90,17 +90,18 @@
 					      </div>
 					    </div>
 					    <div class="form-group">
-					    	<label class="col-lg-2 control-label">Horario</label>	
+					    	
 					    	<div th:class="${#fields.hasErrors('horaInicio')}? 'form-item has-error' : form-item">
+					    	  <label class="col-lg-2 control-label">Horario</label>	
 						      <div class="col-lg-4">
 						        <input type="text" class="form-control" id="horaInicio" th:field="*{horaInicio}" placeholder="08:00"/>
-						        <label class="control-label" th:if="${#fields.hasErrors('horaInicio')}" th:errors="*{horaInicio}">O campo horário tem que ser preenchido.</label>
+						        <label class="control-label" th:errors="*{horaInicio}">O campo horário tem que ser preenchido.</label>
 						      </div>
 					    	</div>
 					    	<div th:class="${#fields.hasErrors('horaTermino')}? 'form-item has-error' : form-item">
 						      <div class="col-lg-4">
 						        <input type="text" class="form-control" id="horaTermino" th:field="*{horaTermino}" placeholder="08:00"/>
-						      	<label class="control-label" th:if="${#fields.hasErrors('horaTermino')}" th:errors="*{horaTermino}">O campo horário tem que ser preenchido.</label>
+						      	<label class="control-label" th:errors="*{horaTermino}">O campo horário tem que ser preenchido.</label>
 						      </div>
 					    	</div>
 					    	<div class="form-item">
